Finalized the writing of the README and updated some files to remove some unnecessary things